--- a/web_server/project.html
+++ b/web_server/project.html
@@ -58,18 +58,19 @@
             var t0 = 0.0;       // relative to project creation
             var ctx = canvas.getContext("2d");
             ctx.clearRect(0,0,CanvasW,CanvasH);
-            for( event of file_timeline )
-            {
-                var t = event.t;
-                var e = event.event;
-                var color = EventColors[e];
-                if( color != null )
+            if( false )
+                for( event of file_timeline )
                 {
-                    ctx.fillStyle = color;
-                    var x = t/now * CanvasW;
-                    ctx.fillRect(x,CanvasH/2,CanvasW-x,CanvasH/2);
+                    var t = event.t;
+                    var e = event.event;
+                    var color = EventColors[e];
+                    if( color != null )
+                    {
+                        ctx.fillStyle = color;
+                        var x = t/now * CanvasW;
+                        ctx.fillRect(x,CanvasH/2,CanvasW-x,CanvasH/2);
+                    }
                 }
-            }
             for( event of handle_timeline )
             {
                 var t = event.t;
@@ -110,15 +111,17 @@
                                         }{{"," if not loop.last}}
                                     {% endfor %}
                                 ];
-                                var file_timeline = [
-                                    {% for record in files_log[did] %}
-                                        {   t: {{project.time_since_created(record.T)}},
-                                            event: "{{record.Type}}"
-                                        }{{"," if not loop.last}}
-                                    {% endfor %}
-                                ];
+                                {#
+                                        var file_timeline = [
+                                        {% for record in files_log[did] %}
+                                            {   t: {{project.time_since_created(record.T)}},
+                                                event: "{{record.Type}}"
+                                            }{{"," if not loop.last}}
+                                        {% endfor %}
+                                    ];
+                                #}
                                 var now = {{project.time_since_created()}};
-                                show_timeline(document.getElementById("timeline:{{did}}"), now, handle_timeline, file_timeline);
+                                show_timeline(document.getElementById("timeline:{{did}}"), now, handle_timeline);           //, file_timeline);
                             </script>
                         </tr>
                         <tr id="handle_log:{{did}}" style="visibility:hidden; display:none">
