--- a/web_server/project.html
+++ b/web_server/project.html
@@ -74,7 +74,7 @@
             for( event of handle_timeline )
             {
                 var t = event.t;
-                var e = event.event;
+                var e = event.state;
                 var color = EventColors[e];
                 if( color != null )
                 {
