--- a/web_server/project.html
+++ b/web_server/project.html
@@ -43,11 +43,11 @@
         var CanvasW = 400;
         var EventColors = {
                 "initial":    "#EEE",
-                "found":      "#88F", 
-                "available":  "#8FF",
-                "reserved":   "#FF8", 
-                "done":       "#8F8", 
-                "failed":     "#F88"
+                "found":      "#CCC", 
+                "available":  "#8F8",
+                "reserved":   "#AFA", 
+                "done":       "#4F4", 
+                "failed":     "#F44"
         };
         
         function show_timeline(canvas, now, handle_timeline, file_timeline)
