--- a/web_server/base.html
+++ b/web_server/base.html
@@ -212,12 +212,21 @@
         color: #AAA;
     }
 
+    "initial":    "#EEE",
+    "found":      "#CCC", 
+    "available":  "#8F8",
+    "reserved":   "#AFA", 
+    "done":       "#4F4", 
+    "failed":     "#F44"
+
+
+
     .failed {
-        background-color: #F88;
+        background-color: #F44;
     }
 
     .done {
-        background-color: #8F8;
+        background-color: #4F4;
     }
 
     .cancelled {
@@ -229,15 +238,15 @@
     }
 
     .reserved, .active {
-        background-color: #FF8;
+        background-color: #AAF;
     }
 
     .found {
-        background-color: #88F;        
+        background-color: #CCC;        
     }
     
     .available {
-        background-color: #8FF;             // #8F8        
+        background-color: #8F8;             // #8F8        
     }
     
     .unavailable {
