--- a/web_server/base.html
+++ b/web_server/base.html
@@ -212,21 +212,12 @@
         color: #AAA;
     }
 
-    "initial":    "#EEE",
-    "found":      "#CCC", 
-    "available":  "#8F8",
-    "reserved":   "#AFA", 
-    "done":       "#4F4", 
-    "failed":     "#F44"
-
-
-
     .failed {
         background-color: #F44;
     }
 
     .done {
-        background-color: #4F4;
+        background-color: #4A4;
     }
 
     .cancelled {
