--- a/web_server/project.html
+++ b/web_server/project.html
@@ -46,7 +46,7 @@
                 "found":      "#CCC", 
                 "available":  "#8F8",
                 "reserved":   "#AFA", 
-                "done":       "#4F4", 
+                "done":       "#4A4", 
                 "failed":     "#F44"
         };
         
