--- a/web_server/project.html
+++ b/web_server/project.html
@@ -45,7 +45,7 @@
                 "initial":    "#EEE",
                 "found":      "#CCC", 
                 "available":  "#8F8",
-                "reserved":   "#AFA", 
+                "reserved":   "#AAF", 
                 "done":       "#4A4", 
                 "failed":     "#F44"
         };
