--- a/web_server/base.html
+++ b/web_server/base.html
@@ -265,9 +265,9 @@
 
     <script>
         var img_arrow_right = new Image(12,12);
-        img_arrow_right.src = "{{GLOBAL_AppTopPath}}/static/arrow-right.gif";
+        img_arrow_right.src = "{{GLOBAL_PathPrefix}}/static/arrow-right.gif";
         var img_arrow_down = new Image(12,12);
-        img_arrow_down.src = "{{GLOBAL_AppTopPath}}/static/arrow-down.gif";
+        img_arrow_down.src = "{{GLOBAL_PathPrefix}}/static/arrow-down.gif";
     </script>
     
 </head>
