--- a/web_server/project.html
+++ b/web_server/project.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td><a href="javascript:toggle_handle_log('{{did}}')" id="log_toggle:{{did}}"></a></td>
                                 <script type="text/javascript">
-                                    document.getElementDyId("log_toggle:{{did}}").appendChild(img_arrow_right);
+                                    document.getElementById("log_toggle:{{did}}").appendChild(img_arrow_right);
                                 </script>
                             <td><a href="./handle?project_id={{project.ID}}&namespace={{handle.Namespace}}&name={{handle.Name}}">{{did}}</a></td>
                             {% set state = handle.state() %}
