--- a/web_server/project.html
+++ b/web_server/project.html
@@ -156,7 +156,7 @@
                         {
                             var element_id = "handle_log:"+did;
                             var element = document.getElementById(element_id);
-                            var toggle_a_element = document.getElementById(log_toggle:{{did}});
+                            var toggle_a_element = document.getElementById("log_toggle:" + did);
                             while (toggle_a_element != null && toggle_a_element.firstChild) {
                                     toggle_a_element.removeChild(toggle_a_element.firstChild);
                                 }
