--- a/web_server/project.html
+++ b/web_server/project.html
@@ -165,7 +165,7 @@
                             var tr = document.getElementById("handle_log:"+did);
                             var toggle_img = document.getElementById("log_toggle_img:" + did);
                             var toggle_td = document.getElementById("log_toggle_td:" + did);
-                            if( element != null )
+                            if( tr != null )
                             {
                                 var v = element.style.visibility;
                                 if( v == "hidden" )
