--- a/web_server/project.html
+++ b/web_server/project.html
@@ -167,7 +167,7 @@
                             var toggle_td = document.getElementById("log_toggle_td:" + did);
                             if( tr != null )
                             {
-                                var v = element.style.visibility;
+                                var v = tr.style.visibility;
                                 if( v == "hidden" )
                                 {
                                     tr.style.visibility = "visible";
