--- a/web_server/project.html
+++ b/web_server/project.html
@@ -109,7 +109,7 @@
                             </td>
                             <td><a href="./handle?project_id={{project.ID}}&namespace={{handle.Namespace}}&name={{handle.Name}}">{{did}}</a></td>
                             {% set wf_state = handle.State %}
-                            {% set file_state = handle.file_state %}
+                            {% set file_state = handle.file_state() %}
                             <td class="{{file_state}}">{{file_state}}</td>
                             <td class="{{wf_state}}">{{wf_state}}</td>
                             <td>{{handle.n_replicas}} ({{handle.n_available_replicas}})</td>
