--- a/web_server/base.html
+++ b/web_server/base.html
@@ -34,6 +34,11 @@
             padding: 3px 6px;
         }
 
+        th {
+          color: #638292;
+          font-weight: bold;
+        }
+
     	.form th {
     		font-weight: bold;
     		text-align:  right;
