--- a/web_server/base.html
+++ b/web_server/base.html
@@ -53,7 +53,7 @@
 
         table.data, table.file_metadata {
             border-collapse: separate;
-            border-spacing: 4px;
+            border-spacing: 2px 4px;
         }
         
         .data th {
