--- a/web_server/base.html
+++ b/web_server/base.html
@@ -57,7 +57,7 @@
         }
         
         .data th {
-          border-bottom: 1px solid #436272;
+          border-bottom: 1px solid #83A2A2;
           text-align: left;
         }
 
