--- a/web_server/base.html
+++ b/web_server/base.html
@@ -286,11 +286,11 @@
 <div id="main_menu">
 	<table class="placement link_menu" width="100%">
     	<tr>
-    	    <td><a class=button href="{{GLOBAL_PathPrefix}}/P/projects">projects</a></td>
+    	    <td><a class=button href="{{GLOBAL_PathPrefix}}/P/projects">Projects</a></td>
     	    <td><a class=button href="{{GLOBAL_PathPrefix}}/R/index">RSEs</a></td>
     	    <td><a class=button href="{{GLOBAL_PathPrefix}}/R/proximity_map">CPU/RSE proximity map</a></td>
-            <td style="width:100%"></td>
             <td><span style="color:#AAA; padding-right: 10px"><i>All times in UTC</i></span></td>
+            <td style="width:100%"></td>
     		<td>
                         {% if GLOBAL_User %}
                             <span style="color:#AAA">logged in as {{GLOBAL_User.Name or ""}}&nbsp;{{GLOBAL_User.Username}}&nbsp;</span><a class=button  href="{{GLOBAL_PathPrefix}}/A/logout?redirect={{GLOBAL_PathPrefix}}}/index">log out</a>
