--- a/web_server/base.html
+++ b/web_server/base.html
@@ -65,6 +65,10 @@
             padding: 3px 5px;
         }
 
+        .data td{
+            text-align: right;
+        }
+
 
         .placement th {
             font-weight: bold;
