--- a/web_server/project.html
+++ b/web_server/project.html
@@ -94,12 +94,12 @@
             <td>
                 <table class="data replicas">
                     <tr>
-                        <th></th><th>File</th><th>File Status</th><th>Replicas(available)</th><th>Workflow Status</th><th>Worker</th><th>Attempts</th><th>Timeline</th>
+                        <th style="border-bottom: 0"></th><th>File</th><th>File Status</th><th>Replicas(available)</th><th>Workflow Status</th><th>Worker</th><th>Attempts</th><th>Timeline</th>
                     </tr>
                     {% for handle in handles %}
                         {% set did = handle.Namespace + ":" + handle.Name %}
                         <tr>
-                            <td rowspan=1 id="log_toggle_td:{{did}}" style="border-bottom: 0">
+                            <td rowspan=1 id="log_toggle_td:{{did}}">
                                 <a href="javascript:toggle_handle_log('{{did}}')" style="vertical-align: middle">
                                     <img id="log_toggle_img:{{did}}" width=10 height=10 style="vertical-align: middle"/>
                                     <script type="text/javascript">
