--- a/web_server/project.html
+++ b/web_server/project.html
@@ -107,7 +107,7 @@
                                     </script>
                                 </a>
                             </td>
-                            <td style="text-align:left; font-family: monospace"><a href="./handle?project_id={{project.ID}}&namespace={{handle.Namespace}}&name={{handle.Name}}">{{did}}</a></td>
+                            <td style="text-align:left; font-family: courier-new"><a href="./handle?project_id={{project.ID}}&namespace={{handle.Namespace}}&name={{handle.Name}}">{{did}}</a></td>
                             {% set wf_state = handle.State %}
                             {% set file_state = handle.file_state() %}
                             <td class="{{file_state}}">{{file_state}}</td>
