--- a/web_server/project.html
+++ b/web_server/project.html
@@ -94,7 +94,7 @@
             <td>
                 <table class="data replicas">
                     <tr>
-                        <th style="border-bottom: 0"></th><th>File</th><th>File Status</th><th>Replicas<br/>(available)</th><th>Workflow Status</th><th>Worker</th><th>Attempts</th><th>Timeline</th>
+                        <th style="border-bottom: 0"></th><th>File</th><th>File<br/>Status</th><th>Replicas<br/>(available)</th><th>Workflow<br/>Status</th><th>Worker</th><th>Attempts</th><th>Timeline</th>
                     </tr>
                     {% for handle in handles %}
                         {% set did = handle.Namespace + ":" + handle.Name %}
