--- a/web_server/base.html
+++ b/web_server/base.html
@@ -59,6 +59,7 @@
         .data th {
           border-bottom: 1px solid #83A2A2;
           text-align: left;
+          vertical-align: bottom;
         }
 
         .data td, .data th {
