--- a/web_server/base.html
+++ b/web_server/base.html
@@ -267,6 +267,17 @@
 	<title>{% block page_title %}{{GLOBAL_SiteTitle}}{% endblock %}</title>
     
     <!-- <script src="{{GLOBAL_AppTopPath}}/static/js/request.js"></script> -->
+    
+    <script type="text/javascript">
+        var StateColors = {
+                "initial":    "#EEE",
+                "found":      "#CCC", 
+                "available":  "#8F8",
+                "reserved":   "#AAF", 
+                "done":       "#4A4", 
+                "failed":     "#F44"
+        };
+    </script>
 
 </head>
 
