--- a/web_server/base.html
+++ b/web_server/base.html
@@ -57,15 +57,21 @@
         }
         
         .data th {
-          border-bottom: 1px solid #83A2A2;
           text-align: left;
           vertical-align: bottom;
+          border-bottom: 1px solid #83A2A2;
         }
+
+        .data th.combined {
+            border-bottom: 0;
+            text-align: middle;
+        }
+
 
         .data td, .data th {
             padding: 3px 5px;
         }
-
+        
         .data td{
             text-align: right;
         }
