--- a/web_server/base.html
+++ b/web_server/base.html
@@ -64,7 +64,7 @@
 
         .data th.combined {
             border-bottom: 0;
-            text-align: middle;
+            text-align: center;
         }
 
 
