--- a/web_server/base.html
+++ b/web_server/base.html
@@ -67,6 +67,10 @@
             text-align: center;
         }
 
+        .data th.no__ {
+            border-bottom: 0;
+        }
+
 
         .data td, .data th {
             padding: 3px 5px;
