--- a/web_server/rses.html
+++ b/web_server/rses.html
@@ -19,15 +19,17 @@
 		<th>Description</th>
 	</tr>
     {% for rse in rses %}
-        {% set status = 'available' if rse.Available else 'unavailable' %}
-        {% set enabled = 'enabled' if rse.Enabled else 'disabled' %}
-        <tr class="{{enabled}}">
-            <td><a href="./rse?name={{rse.Name}}">{{rse.Name}}</a></td>
-            <td>{{enabled}}</td>
-            <td>{{'tape' if rse.Tape else 'disk'}}</td>
-            <td class="{{status}}">{{status}}</td>
-            <td>{{rse.Description}}</td>
-        </tr>
+        {% if rse.Enabled %}
+            {% set status = 'available' if rse.Available else 'unavailable' %}
+            {% set enabled = 'enabled' if rse.Enabled else 'disabled' %}
+            <tr class="{{enabled}}">
+                <td><a href="./rse?name={{rse.Name}}">{{rse.Name}}</a></td>
+                <td>{{enabled}}</td>
+                <td>{{'tape' if rse.Tape else 'disk'}}</td>
+                <td class="{{status}}">{{status}}</td>
+                <td>{{rse.Description}}</td>
+            </tr>
+        {% endif %}
     {% endfor %}
 </table>
 
