--- a/web_server/rses.html
+++ b/web_server/rses.html
@@ -10,10 +10,11 @@
     </p>
 {% endif %}
 
+<h2>Enabled RSEs</h2>
+
 <table class="data rses">
 	<tr>
 		<th>Name</th>
-        <th>Enabled</th>
         <th>Type</th>
 		<th>Available</th>
 		<th>Description</th>
@@ -27,6 +28,27 @@
                 <td>{{enabled}}</td>
                 <td>{{'tape' if rse.Tape else 'disk'}}</td>
                 <td class="{{status}}">{{status}}</td>
+                <td>{{rse.Description}}</td>
+            </tr>
+        {% endif %}
+    {% endfor %}
+</table>
+
+<h2>Disabled RSEs</h2>
+
+<table class="data rses">
+	<tr>
+		<th>Name</th>
+        <th>Type</th>
+		<th>Description</th>
+	</tr>
+    {% for rse in rses %}
+        {% if not rse.Enabled %}
+            {% set status = 'available' if rse.Available else 'unavailable' %}
+            {% set enabled = 'enabled' if rse.Enabled else 'disabled' %}
+            <tr class="{{enabled}}">
+                <td><a href="./rse?name={{rse.Name}}">{{rse.Name}}</a></td>
+                <td>{{'tape' if rse.Tape else 'disk'}}</td>
                 <td>{{rse.Description}}</td>
             </tr>
         {% endif %}
