--- a/web_server/projects.html
+++ b/web_server/projects.html
@@ -50,7 +50,7 @@
 		<th rowspan=2>Project ID</th>
         <th rowspan=2>User</th>
 		<th rowspan=2 colspan=2>Status</th>
-		<th colspan="{{handle_states|length}}" class="combined">File counts</th>
+		<th colspan="{{handle_states|length}}" class="combined">File counts per state</th>
 	</tr>
     <tr>
         {% for state in handle_states %}
