--- a/web_server/project.html
+++ b/web_server/project.html
@@ -157,7 +157,7 @@
                                     ];
                                 #}
                                 var now = {{project.time_since_created()}};
-                                show_timeline(document.getElementById("timeline:{{did}}"), now, handle_timeline);           //, file_timeline);
+                                //show_timeline(document.getElementById("timeline:{{did}}"), now, handle_timeline);           //, file_timeline);
                             </script>
                         </tr>
                         <tr id="handle_log:{{did}}" style="visibility:hidden; display:none">
