--- a/web_server/project.html
+++ b/web_server/project.html
@@ -46,7 +46,7 @@
             <td>
     </tr>
     
-    <script type="text/javascript">
+    <s-cript type="text/javascript">
         var CanvasH = 10;
         var CanvasW = 400;
         
@@ -107,7 +107,7 @@
         }
         const closed_log_arrow = "{{GLOBAL_PathPrefix}}/static/arrow-right.gif";
         const open_log_arrow = "{{GLOBAL_PathPrefix}}/static/arrow-down.gif";
-    </script>
+    </s-cript>
 
     <tr>    
             <th>Files</th>
