--- a/web_server/project.html
+++ b/web_server/project.html
@@ -105,9 +105,11 @@
                 }
             }
         }
+    </s-cript>
+    <script>
         const closed_log_arrow = "{{GLOBAL_PathPrefix}}/static/arrow-right.gif";
         const open_log_arrow = "{{GLOBAL_PathPrefix}}/static/arrow-down.gif";
-    </s-cript>
+    </script>
 
     <tr>    
             <th>Files</th>
