--- a/web_server/project.html
+++ b/web_server/project.html
@@ -72,7 +72,7 @@
             });
             
             var scale_g = element_under(svg, "g", {
-                transform: `scale(${CanvasW/now})`
+                transform: `scale(${CanvasW/now}, 1)`
             });
 
             var tnext = now;
